# telegram-ml-contest

./: .gitignore  Cargo.toml  README.md
data/: labels.csv  train_data_5exp.csv  train_data_5exp_labeled.csv
src/: data_transformation.py  inference.rs  main.rs  train.rs
