[package]
name = "telegram-ml-contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "0.6.1"
linfa-bayes = "0.6.1"
linfa-preprocessing = "0.6.1"
polars = {version = "0.33.2", features=["lazy"]}
polars-io = "0.33.2"
polars-core = {version = "0.33.2", features = ["ndarray"]}
ndarray = "0.15.6"
