[package]
name = "telegram-ml-contest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "telegram_ml_contest"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
linfa = {git = "https://github.com/rust-ml/linfa", version = "0.6.1", features = ["serde"] }
linfa-bayes = {git = "https://github.com/rust-ml/linfa", version = "0.6.1", features = ["serde"]}
linfa-preprocessing = {git = "https://github.com/rust-ml/linfa", version = "0.6.1", features = ["serde"]}
ndarray = "0.15.6"
ndarray-csv = "0.5.2"
csv = "1.3.0"
bincode = { version = "1.3.3", features = [] }
